--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:keepScreenOn="true">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
                   android:configChanges="orientation"
-                  android:screenOrientation="portrait"
-                  android:keepScreenOn="true">
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DeviceListActivity" android:theme="@android:style/Theme.DeviceDefault.Dialog">
+        <activity android:name=".DeviceListActivity"
+                  android:theme="@android:style/Theme.DeviceDefault.Dialog">
         </activity>
-        <activity android:name=".SettingActivity"
-                  android:keepScreenOn="true">
+        <activity android:name=".SettingActivity">
         </activity>
 
 
